--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site wide configuration
 
-title: Maths & Physxs Club
+title: Maths & Physics Club
 locale: India
 description: Where Knowledge is Free...
 logo: site-logo.png
