--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,7 +1,7 @@
 # Authors
 
 dhruv_shah:
-  name: Dhruv Ilesh Shah
+  name: Dhruv Ilesh Shanavas
   web: http://PrieureDeSion.github.io
   email: dhruv.ilesh@gmail.com
   bio: "Call me what? Schrodinger's Cat!"
