--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ locale: India
 description: Where Knowledge is Free...
 logo: site-logo.png
 search: true
-url: http://mnp-club.github.io
+url: https://github.com/Guruzeta/Mnp-website.git
 
 # Jekyll configuration
 
